hphp/hack/test/typecheck/array/disallow_value_inputs_for_darray.php
<?hh // partial

function test(): void {
  darray[0];
}
